apply code review suggestions

--- a/docs/references/javascript/clerk/clerk.mdx
+++ b/docs/references/javascript/clerk/clerk.mdx
@@ -7,7 +7,7 @@ description: This is the main entrypoint class for the `@clerk/clerk-js` package
 
 This is the main entrypoint class for the `@clerk/clerk-js` package. It contains a number of methods and properties for interacting with the Clerk API.
 
-## `Clerk` properties
+## Properties
 
 | Name | Type | Description |
 | --- | --- | --- |
@@ -23,7 +23,7 @@ This is the main entrypoint class for the `@clerk/clerk-js` package. It contains
 | `organization` | [`Organization`][organization-ref] \| `null` \| `undefined` | A shortcut to the last active `Session.user.organizationMemberships` which holds an instance of a `Organization` object. If the session is `null` or `undefined`, the user field will match. |
 | `publishableKey` | `string \| undefined` | The publishable key from your Clerk Dashboard, used to connect to Clerk |
 
-## `Clerk` methods
+## Methods
 
 ### `addListener()`
 
@@ -45,9 +45,9 @@ function addListener(listener: ((emission: Resources) => void)): UnsubscribeCall
 | `lastOrganizationMember` | [`OrganizationMembership`](/docs/references/javascript/organization-membership) \| `null` \| `undefined` |
 
 <Callout>
-  Please note that the `Session` and `User` object have a special relationship that the type definition alone does not capture:
-    - When there is an active session, `user === session.user`. When there is no active session, `User` and `Session` will both be `null`.
-    - When a session is loading, `User` and `Session` will be `undefined`.
+  Note the following about `User` and `Session`:
+    - When there is an active session, `user === session.user`.
+    - When there is no active session, `User` and `Session` will both be `null`.
 </Callout>
 
 #### `addListener()` returns
@@ -72,7 +72,7 @@ function authenticateWithMetamask({
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `redirectUrl?` | `string \| undefined` | Full URL or path to navigate after successful sign in or sign up. |
+| `redirectUrl?` | `string \| undefined` | Full URL or path to navigate to after a successful sign in or sign up. |
 | `signUpContinueUrl?` | `string \| undefined` | The location to continue navigation to in the sign up process if data is missing. |
 | `customNavigate?` | `((to: string) => Promise<unknown> \| unknown) \| undefined` | Allows you to define a custom navigation function |
 
@@ -108,7 +108,7 @@ Only one of the two properties are allowed to be set at a time.
 
 Initializes the `Clerk` object and loads all necessary environment configuration and instance settings from the [Frontend API](https://clerk.com/docs/reference/frontend-api).
 
-It is absolutely necessary to call this method before using the `Clerk` object in your code. Refer to the [ClerkJS installation](/docs/quickstarts/javascript) guide for more details.
+You must call this method before using the `Clerk` object in your code. Refer to the [ClerkJS installation](/docs/quickstarts/javascript) guide for more details.
 
 ```typescript
 function load(options?: ClerkOptions): Promise<void>;
@@ -138,7 +138,10 @@ All props below are optional.
 
 ### `signOut()`
 
-Signs out the active user from all sessions in a [multi-session application](/docs/custom-flows/multi-session-applications), or simply the current session in a single-session context. The current client will be deleted. You can specify a specific session to sign out by passing the `sessionId` parameter.
+- In a [multi-session application](/docs/custom-flows/multi-session-applications): Signs out the active user from all sessions
+- In a single-session context: Signs out the active user from the current session
+
+The current client will be deleted. You can specify a specific session to sign out by passing the `sessionId` parameter.
 
 ```typescript
 function signOut(options?: SignOutOptions): Promise<void>;
